
This file lists all changes in the public Collage API, latest on top:

09/Aug/2012
  Made co::DataOStream::write private. Use 'os << co::Array< T >( ptr, num )'
  instead.

27/Jul/2012
  Made co::DataIStream::read private. Use 'is >> co::Array< T >( ptr, num )'
  instead.

-------------------------------Equalizer 1.4---------------------------------

-------------------------------Equalizer 1.2---------------------------------

25/Oct/2011
  Removed co::Object::commitNB and commitSync since request is no longer
  dispatched to command thread. Use commit instead.

17/Jul/2011
  Moved installed client headers to eq/client. Applications should
  always use <eq/eq.h> instead of individual headers.

03/Jun/2011
  Added a return value and timeout to co::LocalNode::acquireSendToken(),
  see method documentation.

29/Mar/2011
  Changed
    uint32_t eq::Version::getRevision();
  to:
    std::string eq::Version::getRevision();


-------------------------------Equalizer 1.0---------------------------------

14/Mar/2011
  Changed object mapping behavior when using a concrete version from:
    If the requested version does no longer exist, mapObject() will fail.
  to:
    If a concrete requested version no longer exists, mapObject() will
    map the oldest available version.

  Moved include/GL to include/eq/GL. Use '#include <eq/gl.h>' to include
  OpenGL headers only.

10/Mar/2011
  Do not include window system headers by default to avoid global
  namespace pollution. Define EQ_SYSTEM_INCLUDES before including
  eq/eq.h to get previous definitions.

01/Mar/2011
  Added new 'incarnation' parameter to co::Object::commit, with a
  default parameter selecting the previous behavior for commit wrt auto
  obsoletion. co::Object::commitNB has the same new parameter, with no
  default value.

----------------------------Equalizer 1.0 beta-------------------------------

10/Feb/2011
  Changed GLXWindow implementation to use GLXFBConfigs. Use GLXFBConfigs