@@ -40,18 +40,16 @@ namespace detail { class Command; }
     class Command : public DataIStream
     {
     public:
-        /** @internal */
-        CO_API Command();
+        CO_API Command(); //!< @internal
 
-        /** @internal */
-        CO_API Command( ConstBufferPtr buffer );
+        CO_API Command( ConstBufferPtr buffer ); //!< @internal
 
         CO_API Command( const Command& rhs ); //!< @internal
         Command& operator = ( const Command& rhs ); //!< @internal
 
         CO_API void clear(); //!< @internal
 
-        CO_API virtual ~Command();
+        CO_API virtual ~Command(); //!< @internal
 
         /** @name Data Access */
         //@{
@@ -61,10 +59,10 @@ namespace detail { class Command; }
         /** @return the command. @version 1.0 */
         CO_API uint32_t getCommand() const;
 
-        /** @internal @return the size of this command. */
+        /** @internal @return the size of this command. @version 1.0 */
         CO_API uint64_t getSize() const;
 
-        /** @return a value from the command. */
+        /** @return a value from the command. @version 1.0 */
         template< typename T > T get()
         {
             T value;
@@ -78,19 +76,19 @@ namespace detail { class Command; }
         /** @return the receiving node. @version 1.0 */
         CO_API LocalNodePtr getLocalNode() const;
 
-        /** @internal @return true if the command has a valid buffer. */
+        /** @return true if the command has valid data. @version 1.0 */
         CO_API bool isValid() const;
         //@}
 
         /** @internal @name Dispatch command functions.. */
         //@{
-        /** @internal Change the command type for subsequent dispatching. */
+        /** Change the command type for subsequent dispatching. */
         CO_API void setType( const CommandType type );
 
-        /** @internal Change the command for subsequent dispatching. */
+        /** Change the command for subsequent dispatching. */
         CO_API void setCommand( const uint32_t cmd );
 
-        /** @internal Set the function to which the command is dispatched. */
+        /** Set the function to which the command is dispatched. */
         void setDispatchFunction( const Dispatcher::Func& func );
 
         /** Invoke and clear the command function of a dispatched command. */
